# todo-ci

./: .gitignore  .tdignore  Cargo.toml  Dockerfile  LICENSE  README.md  test.txt
.github/workflows/: ci.yml
src/: cli.rs  core.rs  display.rs  lib.rs  main.rs
src/core/: mod.rs
tests/: base.rs  ignores.rs  mod.rs  simple.rs
tests/display/: mod.rs
tests/error_code/: mod.rs
tests/error_code/fixtures/: file_with_todos.rs
tests/ignores/: default_ignores.rs  mod.rs  patterns.rs  tdignore.rs
tests/ignores/fixtures/patterns/: will_also_be_scanned.ts
tests/ignores/fixtures/tdignore/: ignored.rs
tests/resources/: test-file.js  test-file.rs  test-file.scala
tests/resources/base/: file_with_todos.rs
tests/simple/: mod.rs  valid.rs
tests/simple/fixtures/: another_file_without_todos.rs
