[package]
name = "todo-ci"
version = "0.2.0"
edition = "2021"

authors = ["Ali Adnan <ali.adnani@hotmail.com>"]
license = "MIT"
description = "A simple CI/CD CLI tool for registering and checking todos in code with deadlines"
readme = "README.md"
homepage = "https://github.com/aliadnani/todo-ci"
repository = "https://github.com/aliadnani/todo-ci"
keywords = ["todo", "cli", "ci", "cd"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bunt = "0.2.6"
chrono = "0.4.22"
clap = { version = "4.0.14", features = ["derive"] }
eyre = "0.6.8"
globset = "0.4.9"
grep = "0.2.10"
ignore = "0.4.18"

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
pretty_assertions = "1.3.0"
